--- a/_custom_header.html
+++ b/_custom_header.html
@@ -1,1 +1,11 @@
 <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3MMCZ72V5H"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3MMCZ72V5H');
+</script>
