--- a/_custom_header.html
+++ b/_custom_header.html
@@ -1,5 +1,10 @@
 <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+<a href="https://raw.githubusercontent.com/drhrf/MCBS/master/_main_files/MCBSbook.pdf" target="_blank" style="position: absolute; top: 10px; right: 60px;">
+  <i class="fas fa-file-pdf" style="font-size: 24px; color: #333;"></i>
+</a>
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-3MMCZ72V5H"></script>
 <script>
