--- a/_main_files/referências.html
+++ b/_main_files/referências.html
@@ -20,7 +20,7 @@
   <meta name="twitter:description" content="Referências | Metodologia científica e Bioestatística." />
   <meta name="twitter:image" content="https://drhrf.github.io/MCBS/images/MCBS_cover.png" />
 
-<meta name="author" content="Editor: Dr. Hércules Rezende Freitas" />
+<meta name="author" content="Editor: Hércules Rezende Freitas, Ph.D." />
 
 
 <meta name="date" content="2024-11-29" />
@@ -53,6 +53,11 @@
 <link href="libs/anchor-sections-1.1.0/anchor-sections-hash.css" rel="stylesheet" />
 <script src="libs/anchor-sections-1.1.0/anchor-sections.js"></script>
 <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+<a href="https://raw.githubusercontent.com/drhrf/MCBS/master/_main_files/MCBSbook.pdf" target="_blank" style="position: absolute; top: 10px; right: 60px;">
+  <i class="fas fa-file-pdf" style="font-size: 24px; color: #333;"></i>
+</a>
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-3MMCZ72V5H"></script>
@@ -107,7 +112,9 @@ div.csl-indent {
       <nav role="navigation">
 
 <ul class="summary">
-<li><a href="./">Metodologia científica e Bioestatística</a></li>
+<li><a href="https://raw.githubusercontent.com/drhrf/MCBS/master/_main_files/MCBSbook.pdf" target="blank">Baixar MCBS como PDF</a></li>
+<li><a href="https://raw.githubusercontent.com/drhrf/MCBS/master/_main_files/MCBSbook.epub" target="blank">Baixar MCBS como EPUB</a></li>
+<li><a href="./">SUMÁRIO</a></li>
 
 <li class="divider"></li>
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Sobre o projeto</a></li>
@@ -352,8 +359,8 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": "https://github.com/USERNAME/REPO/edit/BRANCH/13_Referencias.Rmd",
-"text": "Edit"
+"link": null,
+"text": null
 },
 "history": {
 "link": null,
@@ -363,7 +370,7 @@ gitbook.start({
 "link": null,
 "text": null
 },
-"download": ["MCBSbook.pdf"],
+"download": null,
 "search": {
 "engine": "fuse",
 "options": null
